# tsdf-vis

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: _global.cmake  fmt.cmake  glm.cmake  glsl.cmake  imgui.cmake  sdl.cmake  shaders.cmake  spirv.cmake  vk.cmake  vma.cmake
include/: camera.hpp  engine.hpp  grid.hpp  image.hpp  imgui.hpp  input.hpp  pipeline.hpp  renderer.hpp  swapchain.hpp
include/components/: camera.hpp  grid.hpp  image.hpp  indices.hpp  mesh.hpp  mesh_pool.hpp  plymesh.hpp  scene.hpp  vertices.hpp
include/components/extra/: plymesh.hpp
include/components/mesh/: indices.hpp  mesh.hpp  mesh_pool.hpp  temp_meshpool.hpp  vertices.hpp
include/components/transform/: camera.hpp  temp_transformpool.hpp  transform.hpp
include/core/: buffer.hpp  device_selector.hpp  engine.hpp  imgui.hpp  input.hpp  pipeline.hpp  queues.hpp  renderer.hpp  smaa.hpp  swapchain.hpp  window.hpp
include/extra/: grid.hpp  plymesh.hpp
include/util/: device_selector.hpp
include/utils/: device_selector.hpp
shaders/: cells.frag  default.frag  default.vert  gradient.comp  query_points.frag  query_points.vert  scan_points.vert
shaders/defaults/: default.frag  default.vert  oversized_triangle.vert
shaders/extra/: cells.vert  scan_points.vert
shaders/smaa/: blend_weight_calc.frag  blend_weight_calc.vert  blending.frag  blending.vert  blending_calc.frag  edge_detection.frag  edge_detection.vert  edges.frag  edges.vert  neigh_blending.frag  neigh_blending.vert  settings.glsl  settings.h  smaa.hlsl  weights.frag  weights.vert
src/: imgui.cpp  main.cpp  pipeline.cpp
src/core/: device_selector.cpp  imgui.cpp  pipeline.cpp  smaa.cpp
src/util/: device_selector.cpp
